# engr-2050-jaminator

./: .gitignore
client/: CMakeLists.txt  README.md
client/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  fan.c  fan.h  wifi.c  wifi.h
control-simulation/: README.md  greenhouse_controller.py  greenhouse_model.py  main.py
server/: app.py
server/templates/: dashboard.html
